# Finops-multiple-cloud-cost-analyzer-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_focus_schema.py  0002_budgets.py  0003_line_reconciliation.py  0004_blended_cost.py  0005_recommendation_decisions.py  0006_snooze_until.py  0007_policies.py
src/mcca/: __init__.py  __main__.py  config.py  logging.py  simulate.py  tracing.py
src/mcca/agent/: __init__.py  graph.py  model.py  prompts.py  state.py
tests/: conftest.py
tests/fixtures/: sample_cost_explorer.json
tests/integration/: test_agent_graph.py  test_allocation_seed.py  test_attribution_explain_seed.py  test_budget_seed.py  test_detection_seed.py  test_eval_scripted.py  test_forecasting_seed.py  test_governance_seed.py  test_messy_cases_seed.py  test_multicloud_seed.py  test_numeric_faithfulness_seed.py  test_optimization_seed.py  test_queries_against_seed.py  test_reconciliation_seed.py  test_report_seed.py  test_routing_seed.py  test_seed_warehouse.py  test_simulate_seed.py  test_warehouse_roundtrip.py
tests/unit/: test_access_scoping.py  test_allocation.py  test_azure_generator.py  test_azure_loader.py  test_azure_normalize.py  test_budgets.py  test_catalog_hint.py  test_config.py  test_cost_tools.py  test_detection.py  test_eval.py  test_explain.py  test_faithfulness.py  test_forecasting.py  test_gcp_generator.py  test_gcp_loader.py  test_gcp_normalize.py  test_governance.py  test_graph.py  test_ingest_loader.py  test_knowledge.py  test_model.py  test_models.py  test_normalize.py  test_optimization.py  test_queries.py  test_report.py  test_routing.py  test_schema.py  test_synthetic_generator.py  test_tracing.py  test_web.py
(+76 files in other folders)
