[project]
name = "mcca-agent"
version = "0.1.0"
description = "Multi-Cloud Cost Analyzer — a read-only FinOps agent (AWS first) over a FOCUS-schema warehouse."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# Runtime dependencies. Forecasting libs (prophet/statsmodels) are intentionally
# deferred to build step 6 and are NOT installed yet.
dependencies = [
    # Warehouse / data-access layer
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13",
    # Config + domain models
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3",
    # AWS ingestion (read-only)
    "boto3>=1.34",
    # Agent orchestration + tracing (wired in from day one)
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langsmith>=0.1",
]

[project.scripts]
# Placeholder CLI entry point; the runner is a stub this session.
mcca = "mcca.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcca"]

# --- uv ------------------------------------------------------------------------
[tool.uv]
package = true

# --- ruff ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# --- pytest --------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require a live Postgres (docker compose up -d).",
]
